# pacman

./: Makefile.am  configure.ac  meson.build
contrib/: bash_completion.in  zsh_completion.in
doc/: Doxyfile  Doxyfile.in  Makefile.am  pacman.8.asciidoc  pacman.8.txt  pacman.conf.5.asciidoc
lib/libalpm/: Makefile.am  add.c  alpm.c  alpm.h  alpm_list.c  alpm_list.h  be_local.c  be_package.c  be_sync.c  conflict.c  db.c  db.h  delta.c  deps.c  diskspace.c  diskspace.h  dload.c  dload.h  error.c  filelist.c  fmt.c  graph.c  graph.h  handle.c  handle.h  log.c  log.h  mhashtable.c  mhashtable.h  package.c  package.h  remove.c  resolver.c  resolver.h  signing.c  sync.c  thread.h  trans.c  util.c  util.h
scripts/: makepkg.sh.in  pacman-key.sh.in
scripts/libmakepkg/source/: file.sh.in
src/common/: util-common.c  util-common.h
src/pacman/: Makefile.am  callback.c  conf.c  conf.h  database.c  files.c  pacman-conf.c  pacman.c  pacman.h  query.c  remove.c  sync.c  transaction.c  upgrade.c  util.c
src/util/: .gitignore  Makefile.am  pacman-conf.c
test/alpm/: .gitignore  .proverc  Makefile.am  README  alpm_add_remove.c  alpm_filelist.c  alpm_initialize.c  alpm_list.c  alpm_list_append.c  alpm_list_shift.c  alpmtest.h  cached_part_file.c  pactest.c  ptrun  ptserve.c  remote_sync.c  tap.c  tap.h
test/alpm/t/: Makefile.am  alpm_add_remove.c  alpm_add_remove_sync.c  alpm_filelist.c  alpm_initialize.c  alpm_list.c  alpm_list_append.c  alpm_list_shift.c  alpm_list_sort.c  alpm_pkg_vercmp.c  cached_part_file.c  part_file_in_secondary_cache.c  remote_sync.c  sync.c
test/pacman/: meson.build  pactest.py  pmenv.py  pmtest.py
test/pacman/tests/: TESTS  combined001.py  combined002.py  combined003.py  depconflict110.py  fileconflict030.py  ignore005.py  provision004.py  symlink-replace-with-dir.py  sync-server-failover-resume.py  sync-server-failover.py  sync-update-package-removing-required-provides.py  sync043.py  sync044.py  sync046.py  sync140.py  sync141.py  sync406.py  sync890.py  sync892.py  sync896.py  sync898.py  sync899.py  sync900.py  sync901.py  sync992.py  sync999.py  unresolvable001.py  upgrade-download-with-xfercommand.py  upgrade051.py  upgrade090.py
